# Proyecto_III_Datos_II

./: README.md
Client/: Button.cpp  Button.h  CMakeLists.txt  ClientSock.cpp  ClientSock.h  GUI.cpp  GUI.h  HuffDict.cpp  HuffDict.h  Huffman.cpp  Huffman.h  Interface.h  SFMLTools.h  StrChar.cpp  StrChar.h  UI.h  main.cpp
Client/glade/: glade.glade
Client/html/: _client_sock_8h_source.html  _huffman_8h_source.html  _interface_8h_source.html  _str_char_8h.html  _str_char_8h_source.html  _u_i_8h_source.html  annotated.html  class_client_sock-members.html  class_client_sock.html  class_huff_dict.html  class_huffman-members.html  class_huffman.html  class_str_char-members.html  class_str_char.html  class_u_i-members.html  class_u_i.html  classes.html  classnlohmann_1_1basic__json.html  classnlohmann_1_1byte__container__with__subtype-members.html  classnlohmann_1_1detail_1_1binary__reader-members.html  classnlohmann_1_1detail_1_1binary__reader.html  classnlohmann_1_1detail_1_1binary__writer.html  classnlohmann_1_1detail_1_1exception-members.html  classnlohmann_1_1detail_1_1file__input__adapter-members.html  classnlohmann_1_1detail_1_1file__input__adapter.html  classnlohmann_1_1detail_1_1iter__impl.html  (+153 more)
Server/: BytesConverter.cpp  BytesConverter.h  CMakeLists.txt  DiskNode.cpp  DiskNode.h  FileManager.cpp  FileManager.h  HuffDict.cpp  HuffDict.h  Huffman.cpp  Huffman.h  ListDiskNode.cpp  ListDiskNode.h  ListPath.cpp  ListPath.h  NodeController.cpp  NodeController.h  NodePath.cpp  NodePath.h  ServerSocket.cpp  ServerSocket.h  StrChar.cpp  StrChar.h  file.json  main.cpp
(+463 files in other folders)
